--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {
+    "required": {
+        "php": ">=5.6.3"
+    },
+    "require-dev": {
         "noobphp/request": "dev-master"
     },
     "autoload": {
